src/objects/Telefonos_Transfer_CIA__c.object
<CustomObject>
    <fields>
        <fullName>TTC_LKP_Cuenta__c</fullName>
        <description>Cuenta a la que pertenece. Representa la FK al objeto Account. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External Id: Account.CUE_TXT_Identificador__c</description>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teléfonos Transfer CIA</relationshipLabel>
        <relationshipName>TTC_REL_Cuenta</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TTC_TXT_Ayuda__c</fullName>
        <description>Ayuda mostrada al seleccionar el teléfono</description>
        <label>Ayuda</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TTC_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Teléfonos Transfer CIA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TTC_LKP_Cuenta__c</columns>
        <columns>TTC_TXT_Descripcion__c</columns>
        <columns>TTC_TXT_Ayuda__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teléfonos Transfer CIA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>